--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-	--background: #171717;
-	--foreground: #ffffff;
+	--background: #000909;
+	--foreground: #efffff;
 }
 
 @theme inline {
