--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,18 @@
 :root {
 	--background: #000909;
 	--foreground: #efffff;
+	--primary: #1fe690;
+	--primary-hover: #1fce84;
 }
 
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
+	--color-primary: var(--primary);
+	--color-primary-hover: var(--primary-hover);
 }
 
 body {
 	background: var(--background);
 	color: var(--foreground);
-	font-family: (--sans), sans-serif;
 }
